# document_parser

./: .gitignore  404.html  CLAUDE.md  README.md  document.hwp  index.html  mkdocs.yml  objects.inv  output.md  pyproject.toml  sitemap.xml
.claude/: hookify.check-docs-update.local.md  hookify.require-feature-branch.local.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
agents/: docs-updater.md
api-reference/: index.html
docs/: adding-formats.md  api-reference.md  architecture.md  getting-started.md  index.md  installation.md  llms-full.txt  llms.txt
docs/api/: index.md  models.md  parsers.md  registry.md  writers.md
docs/formats/: hwp.md  hwpx.md  pdf.md
docs/guides/: advanced.md  cli.md  langchain.md  python-api.md
docs/reference/: architecture.md  extending.md
formats/hwp/: index.html
formats/hwpx/: index.html
formats/pdf/: index.html
guides/advanced/: index.html
guides/cli/: index.html
guides/langchain/: index.html
guides/python-api/: index.html
installation/: index.html
output/: output.md
reference/architecture/: index.html
reference/extending/: index.html
scripts/: setup-hooks.sh
scripts/hooks/: pre-commit
search/: search_index.json
src/docparser/: __init__.py  __main__.py  cli.py  models.py  registry.py
src/docparser/parsers/: hwp.py  hwpx.py
src/docparser/writers/: markdown.py
src/ureca_document_parser/: __init__.py  __main__.py  cli.py  models.py  protocols.py  registry.py  styles.py
src/ureca_document_parser/hwp/: __init__.py  parser.py  records.py  tables.py  text.py
src/ureca_document_parser/hwpx/: __init__.py  parser.py
src/ureca_document_parser/pdf/: __init__.py  parser.py
src/ureca_document_parser/writers/: __init__.py  markdown.py
tests/: conftest.py  test_cli.py  test_hwp_parser.py  test_hwpx_parser.py  test_markdown_writer.py  test_models.py  test_registry.py
