[project]
name = "docparser"
version = "0.2.0"
description = "Multi-format document parser and converter (HWP, HWPX, PDF, Image)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["olefile>=0.47"]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
ocr = ["pillow>=10.0", "pytesseract>=0.3"]
all = ["docparser[pdf,ocr]"]

[project.scripts]
docparser = "docparser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docparser"]
