[project]
name = "ureca_document_parser"
version = "0.0.3"
description = "Multi-format document parser and converter (HWP, HWPX, PDF, Image)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Ureca Enterprise Corp", email = "andy@ureca.im" }
]
keywords = ["hwp", "hwpx", "document", "parser", "converter", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "olefile>=0.47",
]

[project.urls]
Homepage = "https://ureca-corp.github.io/document_parser/"
Documentation = "https://ureca-corp.github.io/document_parser/"
Repository = "https://github.com/ureca-corp/document_parser"
Issues = "https://github.com/ureca-corp/document_parser/issues"

[project.optional-dependencies]
langchain = ["langchain-text-splitters>=0.2", "langchain-core>=0.2"]
pdf = ["pymupdf>=1.24"]
ocr = ["pillow>=10.0", "pytesseract>=0.3"]
all = ["ureca_document_parser[langchain,pdf,ocr,docs]"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
ureca_document_parser = "ureca_document_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ureca_document_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ureca_document_parser"]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
